ready to check without slider

--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -1,6 +1,7 @@
 @use "./utils/_mixins.scss" as *;
 
 .slider {
+  display: block;
   max-width: 100%;
   height: 439px;
   position: relative;
@@ -12,6 +13,10 @@
 
   @include forTablet() {
     max-height: 543px;
+  }
+
+  &--disable {
+    display: none;
   }
 }
 
@@ -30,8 +35,7 @@
   transition: background-color 0.6s ease;
 }
 
-.active,
-.dot:hover {
+.active {
   background-color: #1a5a4c;
 }
 
