ready to check without slider

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -4,7 +4,7 @@
   font-weight: 300;
   line-height: 17px;
   text-align: center;
-  color: #0f0e08;
+  color: $color-black;
   display: flex;
   flex-direction: column;
   margin-bottom: 64px;
