--- a/src/styles/blocks/line.scss
+++ b/src/styles/blocks/line.scss
@@ -22,8 +22,8 @@
     width: 1px;
     height: 280px;
     transform: rotate(-90deg);
-    color: #1a5a4c80;
-    background-color: #1a5a4c80;
+    color: $color-green;
+    background-color: $color-green;
     border: 0;
     margin-top: -100px;
     margin-bottom: -100px;
@@ -42,8 +42,8 @@
     }
 
     &--white {
-      color: #fff;
-      background-color: #fff;
+      color: $color-white;
+      background-color: $color-white;
       margin-top: -115px;
       margin-bottom: -120px;
 
