--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -8,10 +8,10 @@
   left: 0;
   right: 0;
   z-index: 99;
-  background: #1a5a4c;
+  background: $color-green;
   list-style: none;
   padding: 27px 20px;
-  color: #fff;
+  color: $color-white;
   font-family: IBM Plex Sans, sans-serif;
   font-size: 14px;
   font-style: normal;
@@ -38,7 +38,7 @@
   }
 
   &__link {
-    color: #fff;
+    color: $color-white;
     font-family: IBM Plex Sans, sans-serif;
     font-size: 14px;
     font-style: normal;
@@ -72,7 +72,7 @@
   }
 
   &__opening {
-    color: #fff;
+    color: $color-white;
     font-family: IBM Plex Sans, sans-serif;
     font-size: 14px;
     font-style: normal;
