--- a/src/styles/blocks/opening.scss
+++ b/src/styles/blocks/opening.scss
@@ -1,5 +1,5 @@
 .opening {
-  color: #0f0e08;
+  color: $color-black;
   font-family: IBM Plex Sans, sans-serif;
   font-size: 14px;
   font-style: normal;
