--- a/src/styles/blocks/separator.scss
+++ b/src/styles/blocks/separator.scss
@@ -45,13 +45,13 @@
       font-weight: 700;
       line-height: 24px;
       text-align: right;
-      color: #1a5a4c;
+      color: $color-green;
     }
   }
 
   &__frame {
-    background: #fff;
-    box-shadow: 0 2px 0 0 #1a5a4c40;
+    background: $color-white;
+    box-shadow: 0 2px 0 0 $color-green;
     margin: 153px 20px 0;
     padding: 20px 0;
     position: absolute;
