--- a/src/styles/blocks/smth.scss
+++ b/src/styles/blocks/smth.scss
@@ -41,8 +41,8 @@
       position: relative;
       width: 1px;
       height: 70px;
-      color: #1a5a4c80;
-      background-color: #1a5a4c80;
+      color: $color-greenDark;
+      background-color: $color-greenDark;
       border: 0;
       transform: rotate(90deg);
     }
