--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -36,7 +36,7 @@
     &--subscribe {
       margin-top: 88px;
       margin-bottom: 20px;
-      color: #fff;
+      color: $color-white;
 
       @include forTablet() {
         margin-top: 82px;
@@ -75,7 +75,7 @@
     }
 
     &--white {
-      color: #fff;
+      color: $color-white;
     }
   }
 
