--- a/src/styles/blocks/address.scss
+++ b/src/styles/blocks/address.scss
@@ -1,7 +1,7 @@
 @use "./utils/_mixins.scss" as *;
 
 .address {
-  color: #0f0e08;
+  color: $color-black;
   font-family: IBM Plex Sans, sans-serif;
   font-size: 14px;
   font-style: normal;
