--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -56,7 +56,7 @@
   &__tickets {
     font-family: IBM Plex Sans, sans-serif;
     text-decoration: none;
-    color: #0f0e08;
+    color: $color-black;
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
@@ -76,7 +76,7 @@
     }
 
     &--green {
-      background-color: #1a5a4c;
+      background-color: $color-green;
       background-image: url("../images/icons/arrow_right-white.svg");
     }
 
@@ -88,7 +88,7 @@
 
   &__subscribe {
     text-align: left;
-    background: #fff;
+    background: $color-white;
     border: transparent;
     padding-left: 24px;
     width: 206px;
