--- a/src/styles/blocks/links.scss
+++ b/src/styles/blocks/links.scss
@@ -17,7 +17,7 @@
   }
 
   &__link {
-    color: #0f0e08;
+    color: $color-black;
     font-family: IBM Plex Sans, sans-serif;
     font-size: 14px;
     font-style: normal;
