--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -1,7 +1,6 @@
 @use "./utils/_mixins.scss" as *;
 
 .slider {
-  display: block;
   max-width: 100%;
   height: 439px;
   position: relative;
@@ -28,7 +27,7 @@
   cursor: pointer;
   height: 9px;
   width: 9px;
-  margin: 30px 5px 0;
+  margin: 0 5px;
   background-color: #e0e0e0;
   border-radius: 50%;
   display: inline-block;
@@ -36,11 +35,15 @@
 }
 
 .active {
-  background-color: #1a5a4c;
+  background-color: $color-green;
 }
 
 .dots {
   text-align: center;
+
+  @include forDesktop() {
+    visibility: hidden;
+  }
 }
 
 .fade {
