--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import "./utils/reset";
 @import "./utils/mixins";
+@import "./utils/vars";
 
 @import "./blocks/title.scss";
 @import "./blocks/header.scss";
@@ -25,3 +26,4 @@
 @import "./blocks/smth.scss";
 @import "./blocks/slider.scss";
 @import "./blocks/grid.scss";
+@import "./blocks/container-gallery.scss";
