Refactor according with suggested changes

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -24,6 +24,8 @@
   &__link {
     // height: 134px;
     box-sizing: border-box;
+    height: min-content;
+    width: min-content;
   }
 
   &__logo {
