--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -36,19 +36,19 @@
       }
     }
 
-    @for $start from 1 through 6 {
-      @for $end from $start through 6 {
-        &--#{$start}-#{$end} {
-          grid-column: #{$start} / #{$end + 1};
-        }
+    // @for $start from 1 through 6 {
+    //   @for $end from $start through 6 {
+    //     &--#{$start}-#{$end} {
+    //       grid-column: #{$start} / #{$end + 1};
+    //     }
 
-        &--smallTablet-#{$start}-#{$end} {
-          @include onSmallTablet {
-            grid-column: #{$start} / #{$end + 1};
-          }
-        }
-      }
-    }
+    //     &--smallTablet-#{$start}-#{$end} {
+    //       @include onSmallTablet {
+    //         grid-column: #{$start} / #{$end + 1};
+    //       }
+    //     }
+    //   }
+    // }
 
     @for $start from 1 through 6 {
       @for $end from $start through 6 {
