--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -18,19 +18,19 @@
 }
 
 @mixin onTablet {
-  @media (min-width: 768px) {
+  @media (min-width: 768px) and (max-width: 1279px) {
     @content;
   }
 }
 
-@mixin onSmallTablet {
-  @media (min-width: 350px) {
-    @content;
-  }
-}
+// @mixin onSmallTablet {
+//   @media (min-width: 350px) {
+//     @content;
+//   }
+// }
 
 @mixin onMobile {
-  @media (min-width: 320px) {
+  @media (min-width: 320px) and (max-width: 767px) {
     @content;
   }
 }
