--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -65,7 +65,6 @@
     height: 70px;
     width: 100%;
     color: $c-grey-text;
-    // max-width: min-content;
     font-family: Montserrat, sans-serif;
     font-size: 14px;
     font-style: normal;
@@ -75,19 +74,21 @@
 
     @include onMobile {
       // display: inline-block;
-      width: 230px;
+      width: 100%;
       height: 50px;
       padding: 18px 24px;
     }
 
     @include onTablet {
-      width: 374px;
+      // width: 374px;
+      width: 100%;
       height: 70px;
       padding: 28px 24px;
     }
 
     @include onDesktop {
-      width: 470px;
+      // width: 470px;
+      width: 100%;
       height: 70px;
       padding: 28px 32px;
     }
