--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,7 +1,6 @@
 .container {
   margin: 0 auto;
-  // max-width: auto;
-  // width: auto;
+  max-width: 1280px;
   padding: 0 20px;
 
   @include onMobile {
