--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,5 +1,6 @@
 .events {
   box-sizing: border-box;
+  // margin: 0 auto;
 
   &__event {
     @include onMobile {
@@ -32,29 +33,31 @@
   &__image {
     // overflow: hidden;
     // box-sizing: border-box;
+    margin: 0 auto;
+
     @include onMobile {
-      width: 280px;
-      height: 210px;
-      margin-bottom: 24px;
+      width: 100%;
+      height: 100%;
+      // margin-bottom: 24px;
     }
 
-    @include onSmallTablet {
-      width: 90%;
-      height: 90%;
-      margin-bottom: 44px;
-    }
+    // @include onSmallTablet {
+    //   width: 100%;
+    //   height: 100%;
+    //   margin-bottom: 44px;
+    // }
 
     @include onTablet {
-      width: 700px;
-      height: 520px;
-      margin-bottom: 44px;
+      width: 100%;
+      height: 100%;
+      // margin-bottom: 44px;
     }
 
-    @include onSmallDesktop {
-      width: 90%;
-      height: 90%;
-      margin-bottom: 44px;
-    }
+    // @include onSmallDesktop {
+    //   width: 100%;
+    //   height: 100%;
+    //   margin-bottom: 44px;
+    // }
 
     @include onDesktop {
       width: 670px;
@@ -72,19 +75,53 @@
     justify-content: start;
     align-items: center;
     gap: 30px;
-    margin-bottom: 32px;
+    // margin-bottom: 32px;
+
+    @include onMobile {
+      margin: 20px 0 10px;
+      // margin: 0 21px 20px;
+      // gap: 20px;
+    }
+
+    // @include onSmallTablet {
+    //   margin-top: 44px;
+    // }
+
+    @include onTablet {
+      margin: 44px 0 32px;
+    }
+
+    // @include onSmallDesktop {
+    //   margin-top: 44px;
+    // }
+
+    // @include onDesktop {
+    //   margin-bottom: 16px;
+    // }
 
     &--big {
       gap: 130px;
       margin-bottom: 23px;
 
       @include onMobile {
-        gap: 30px;
-        margin-bottom: 20px;
+        // margin-bottom: 20px;
+        margin: 0 21px 20px;
+        gap: 20px;
       }
 
+      // @include onSmallTablet {
+      //   margin-top: 44px;
+      // }
+
       @include onTablet {
-        gap: 190px;
+        margin-bottom: 16px;
+      }
+
+      // @include onSmallDesktop {
+      //   margin-top: 44px;
+      // }
+
+      @include onDesktop {
         margin-bottom: 16px;
       }
     }
@@ -101,20 +138,20 @@
     &--big {
       @include onMobile {
         font-size: 16px;
-        margin-left: 21px;
-        margin-top: 24px;
+        // margin-left: 21px;
+        // margin-top: 24px;
       }
 
       @include onTablet {
         font-size: 14px;
-        margin-left: 55px;
-        margin-top: 45px;
+        // margin-left: 55px;
+        // margin-top: 45px;
       }
 
       @include onDesktop {
         font-size: 14px;
-        margin-left: 100px;
-        margin-top: 45px;
+        // margin-left: 100px;
+        // margin-top: 45px;
       }
     }
   }
@@ -131,19 +168,19 @@
       @include onMobile {
         font-size: 16px;
         // margin-right: 30px;
-        margin-top: 20px;
+        // margin-top: 20px;
       }
 
       @include onTablet {
         font-size: 14px;
-        margin-right: 0;
-        margin-top: 45px;
+        // margin-right: 0;
+        // margin-top: 45px;
       }
 
       @include onDesktop {
         font-size: 14px;
-        margin-right: 100px;
-        margin-top: 45px;
+        // margin-right: 100px;
+        // margin-top: 45px;
       }
     }
   }
@@ -203,27 +240,18 @@
       font-style: normal;
       font-weight: 400;
       line-height: 100%;
-      padding: 0 55px 50px;
+      // padding: 0 55px 50px;
 
       @include onMobile {
         font-size: 28px;
-        text-align: center;
-        padding: 0;
-        padding-bottom: 20px;
       }
 
       @include onTablet {
         font-size: 36px;
-        text-align: left;
-        padding-left: 55px;
-        padding-bottom: 50px;
       }
 
       @include onDesktop {
         font-size: 36px;
-        text-align: left;
-        padding-left: 100px;
-        padding-bottom: 50px;
       }
     }
   }
@@ -238,25 +266,32 @@
   }
 
   &__big-block {
-    margin: 0 auto;
+    box-sizing: border-box;
+    // grid-template-columns: repeat(4,1fr);
+    // margin: 0 auto;
     // width: 370px;
     // height: 204px;
     transform: translateY(-50%);
-    padding: 45px 100px;
+    // padding: 45px 100px;
     background-color: #fff;
     box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
 
     @include onMobile {
+      margin: 0 auto;
       width: 280px;
-      padding: 0;
+      padding: 20px 0;
     }
 
     @include onTablet {
-      width: 100%;
+      margin: 0 auto;
+      width: 570px;
+      padding: 55px 45px;
     }
 
     @include onDesktop {
-      width: 100%;
+      margin: 0 auto;
+      width: 570px;
+      padding: 45px 100px;
     }
   }
 
