--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -1,6 +1,11 @@
 .tickets {
   display: flex;
   justify-content: space-between;
+  cursor: pointer;
+  text-decoration: none;
+  transition-duration: 300ms;
+
+  @include hover(scale, 105%);
 
   @include onTablet {
     justify-content: start;
@@ -48,8 +53,6 @@
     background-position: center;
     cursor: pointer;
 
-    @include hover(scale, 105%);
-
     @include onMobile {
       width: 50px;
       height: 50px;
@@ -70,19 +73,20 @@
       background-color: $c-red;
 
       @include onMobile {
-        width: 50px;
+        min-width: 50px;
         height: 50px;
         border: 0;
       }
 
       @include onTablet {
-        width: 70px;
+        box-sizing: border-box;
+        min-width: 70px;
         height: 70px;
         margin-left: 16px;
       }
 
       @include onDesktop {
-        width: 70px;
+        min-width: 70px;
         height: 70px;
         margin-left: 30px;
       }
