make working slider on < 768px resolution

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -4,6 +4,7 @@
   margin-bottom: 100px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 
   &__picture {
     max-height: 410px;
