--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -1,6 +1,10 @@
 @use "./utils/_mixins.scss" as *;
 
 .slider {
+  display: none;
+}
+
+.slider-active {
   max-width: 100%;
   height: 439px;
   position: relative;
@@ -12,10 +16,6 @@
 
   @include forTablet() {
     max-height: 543px;
-  }
-
-  &--disable {
-    display: none;
   }
 }
 
@@ -41,7 +41,7 @@
 .dots {
   text-align: center;
 
-  @include forDesktop() {
+  @include forTablet() {
     visibility: hidden;
   }
 }
