--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,5 +25,5 @@
 @import "./blocks/upward.scss";
 @import "./blocks/smth.scss";
 @import "./blocks/slider.scss";
-@import "./blocks/grid.scss";
 @import "./blocks/container-gallery.scss";
+@import "./blocks/gallery-desktop.scss";
