--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,27 +3,10 @@
     flex-direction: column;
     text-align: center;
     box-sizing: border-box;
-    padding-inline: 20px;
+    @include paddingInLine;
     padding-top: 9px;
 
-    background-image: url(..//images/mobile-muzej.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-
     position: relative;
-
-    @include onTablet {
-      padding-inline: 34px;
-
-      background-size: 374px 384px;
-      background-position: right;
-    }
-
-    @include onDesctop {
-      padding-top: 15px;
-      background-size: 725px 655px;
-      padding-inline: 55px;
-    }
 
   &__nav {
     display: flex;
@@ -90,18 +73,16 @@
   &__bottom__container {
     display: flex;
     justify-content: center;
+    border-bottom: 2px solid transparent;
+    border-left: 2px solid transparent;
     transition: all 0.3s;
-
-    &:hover {
-      @include forHoverBtn;
-    }
+    @include forHoverBtn;
   }
 
   &__bottom__link {
+    @include forLinks;
     display: block;
     border: 1px solid $background-c-green;
-    text-decoration: none;
-    color: $c-for-text;
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -116,6 +97,10 @@
       width: 200px;
       height: 70px;
       padding: 28px 0;
+
+      &:hover {
+        background-color: $background-c-white;
+      }
     }
   }
 
