add scroll-block and shading-overlay

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,3 +27,4 @@
 @import "./blocks/slider.scss";
 @import "./blocks/container-gallery.scss";
 @import "./blocks/gallery-desktop.scss";
+@import "./blocks/page.scss";
