--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,3 +28,7 @@
 @import "./blocks/container-gallery.scss";
 @import "./blocks/gallery-desktop.scss";
 @import "./blocks/page.scss";
+
+* {
+  scroll-behavior: smooth;
+}
