--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -20,6 +20,7 @@
     border: 1px solid #1a5a1a4c;
     width: 280px;
     height: 50px;
+    transition: transform 0.5s;
 
     @include forTablet() {
       width: 270px;
@@ -36,6 +37,7 @@
     border: transparent;
     width: 100%;
     height: 50px;
+    transition: transform 0.5s;
 
     @include forTablet() {
       height: 70px;
