--- a/src/styles/blocks/links.scss
+++ b/src/styles/blocks/links.scss
@@ -24,5 +24,10 @@
     font-weight: 400;
     line-height: 14px;
     text-decoration: none;
+    transition: transform 0.5s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
