--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -45,6 +45,11 @@
     font-weight: 400;
     line-height: 14px;
     text-decoration: none;
+    transition: transform 0.5s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
 
     @include forTablet() {
       font-size: 16px;
