--- a/src/styles/utils/reset.scss
+++ b/src/styles/utils/reset.scss
@@ -154,3 +154,7 @@ select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
   -webkit-box-shadow: 0 1000px #fff inset;
 }
+
+a {
+  text-decoration: none;
+}
