fix size of section

--- a/src/styles/lections.scss
+++ b/src/styles/lections.scss
@@ -12,9 +12,16 @@
     height: 390px;
   }
 
+  // @include onDesctop {
+  //   height: 550px;
+
+  // }
+
   @include onDesctop {
-    height: 550px;
+    height: calc(100vh - 160px);
+    background-repeat: no-repeat;
   }
+
 
   &__wrapper {
     @include onTablet {
