--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -8,6 +8,11 @@
     background-size: contain;
   }
 
+  @include onDesctop {
+    height: 100vh;
+    background-repeat: no-repeat;
+  }
+
   &__conteiner {
     height: 386px;
     display: flex;
