--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -1,7 +1,7 @@
 .event {
   text-align: left;
 
-  @include onDesctop {
+  @include onLargeScreen {
     display: flex;
     gap: 130px;
   }
@@ -19,7 +19,7 @@
       }
     }
 
-    @include onDesctop {
+    @include onLargeScreen {
       width: 670px;
       margin-bottom: 0;
     }
