--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -1,16 +1,11 @@
 .events {
   padding: 88px 0 60px;
   text-align: center;
-  padding-inline: 20px;
+  @include paddingInLine;
 
   @include onTablet {
-    padding-inline: 34px;
     justify-content: left;
     padding-bottom: 0;
-  }
-
-  @include onDesctop {
-    padding-inline: 55px;
   }
 
   &__wrapper {
