--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -10,7 +10,7 @@
     padding-inline: 34px;
   }
 
-  @include onDesctop {
+  @include onLargeScreen {
     &__cover {
       display: flex;
     }
@@ -55,7 +55,7 @@
       padding-bottom: 64px;
     }
 
-    @include onDesctop {
+    @include onLargeScreen {
       padding-bottom: 0;
       padding-right: 65px;
       margin-bottom: 87px;
@@ -128,7 +128,7 @@
       margin: 64px auto 154px;
     }
 
-    @include onDesctop {
+    @include onLargeScreen {
       margin: 50px 0 0 65px;
     }
   }
