--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -22,7 +22,7 @@
       margin-left: 336px;
     }
 
-    @include onDesctop {
+    @include onLargeScreen {
       margin-left: 476px;
     }
   }
@@ -40,7 +40,7 @@
       margin-bottom: 19px;
     }
 
-    @include onDesctop {
+    @include onLargeScreen {
       align-items: end;
       margin-bottom: 118px;
       width: 470px;
@@ -62,7 +62,7 @@
       text-align: left;
     }
 
-    @include onDesctop {
+    @include onLargeScreen {
       width: 470px;
       font-size: 72px;
       line-height: 86px;
@@ -81,6 +81,7 @@
 
   &__bottom__link {
     @include forLinks;
+    background-color: $background-c-white;
     display: block;
     border: 1px solid $background-c-green;
     font-family: "IBM Plex Sans", sans-serif;
@@ -97,10 +98,6 @@
       width: 200px;
       height: 70px;
       padding: 28px 0;
-
-      &:hover {
-        background-color: $background-c-white;
-      }
     }
   }
 
@@ -118,7 +115,7 @@
   &__side__title {
     display: none;
 
-    @include onDesctop {
+    @include onLargeScreen {
       display: inline-block;
       font-family: inherit;
       font-weight: 700;
