--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,6 +34,7 @@ html {
 
     .header {
       pointer-events: none;
+      z-index: -2;
     }
   }
 }
@@ -58,6 +59,11 @@ html {
   }
 
   @include onDesctop {
+    padding-top: 15px;
+    background-size: 525px auto;
+  }
+
+  @include onLargeScreen {
     padding-top: 15px;
     background-size: 725px 655px;
   }
