--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -8,7 +8,7 @@
     background-size: contain;
   }
 
-  @include onDesctop {
+  @include onLargeScreen {
     height: 100vh;
     background-repeat: no-repeat;
   }
