--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -17,9 +17,15 @@
   }
 }
 
+@mixin onLargeScreen {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
 @mixin paddingInLine {
   padding-inline: 20px;
-  
+
   @include onTablet {
     padding-inline: 34px;
   }
