--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -26,7 +26,7 @@
     padding-block: 39px;
   }
 
-  @include onDesctop {
+  @include onLargeScreen {
     padding-block: 40px;
   }
 
@@ -50,7 +50,7 @@
       gap: 30px;
     }
 
-    @include onDesctop {
+    @include onLargeScreen {
       gap: 102px;
     }
   }
@@ -68,7 +68,7 @@
       margin-right: 30px;
     }
 
-    @include onDesctop {
+    @include onLargeScreen {
       width: 368px;
       margin-right: 102px;
     }
@@ -89,7 +89,7 @@
       }
     }
 
-    @include onDesctop {
+    @include onLargeScreen {
       width: 169px;
     }
   }
@@ -110,7 +110,7 @@
       gap: 26px;
     }
 
-    @include onDesctop {
+    @include onLargeScreen {
       gap: 30px;
       padding-left: 102px;
     }
