--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -39,7 +39,7 @@
       gap: 20px;
     }
 
-    @include onDesctop {
+    @include onLargeScreen {
       flex-wrap: wrap;
       column-gap: 30px;
     }
