--- a/src/styles/actual-events.scss
+++ b/src/styles/actual-events.scss
@@ -30,7 +30,7 @@
     @include onDesktop {
       display: flex;
       gap: 130px;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
       margin: 0 55px 104px;
     }
