--- a/src/styles/contact-us.scss
+++ b/src/styles/contact-us.scss
@@ -97,6 +97,16 @@
     }
   }
 
+  &__contact {
+    text-decoration: none;
+    color: #0F0E08;
+    transition: font-size 0.3s ease;
+
+    &:hover {
+      font-size: 15px;
+    }
+  }
+
   &__button-container {
     border-bottom: 1px solid #1a5a4c;
     display: flex;
@@ -119,9 +129,16 @@
     border-radius: 50%;
     border: 1px solid #1a5a4c;
     margin-bottom: 20px;
+    transition: transform 0.3s ease;
+
+    &:hover {
+      transform: scale(1.3);
+    }
   }
   &__top-arrow {
     @include dimensions(10px, 12px);
+
+
   }
 
   &__footer-contact {
