Refactor according to suggested improvements

--- a/src/styles/blocks/back.scss
+++ b/src/styles/blocks/back.scss
@@ -10,10 +10,17 @@
   background-image: url(../images/carbon_arrow-up.svg);
   background-repeat: no-repeat;
   background-position: center;
+  transition-duration: 300ms;
 
-  @include hover(scale, 105%);
+  &:hover {
+    transform: scale(105%);
+  }
 
   @include onTablet {
+    display: none;
+  }
+
+  @include onDesktop {
     display: none;
   }
 }
