--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,7 +1,17 @@
 .footer {
 
   &__nav {
-    margin-bottom: 87px;
+    @include onDesktop {
+      margin-bottom: 87px;
+    }
+
+    @include onTablet {
+      margin-bottom: 120px;
+    }
+
+    @include onMobile {
+      margin-bottom: 80px;
+    }
   }
 
   &__icons {
@@ -136,31 +146,43 @@
     display: block;
     color: $c-black-text;
     text-decoration: none;
+    transition-duration: 300ms;
 
-    @include hover(color, $c-red);
+    &:hover {
+      color: $c-red;
+    }
   }
 
   &__tell {
     display: block;
     color: $c-black-text;
     text-decoration: none;
+    transition-duration: 300ms;
 
-    @include hover(color, $c-red);
+    &:hover {
+      color: $c-red;
+    }
   }
 
   &__fax {
     display: block;
     color: $c-black-text;
     text-decoration: none;
+    transition-duration: 300ms;
 
-    @include hover(color, $c-red);
+    &:hover {
+      color: $c-red;
+    }
   }
 
   &__email {
     display: block;
     color: $c-black-text;
     text-decoration: none;
+    transition-duration: 300ms;
 
-    @include hover(color, $c-red);
+    &:hover {
+      color: $c-red;
+    }
   }
 }
