--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -56,8 +56,11 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    transition-duration: 300ms;
 
-    @include hover(scale, 110%);
+    &:hover {
+      transform: scale(105%);
+    }
 
     @include onMobile {
       margin-right: 28px;
@@ -101,8 +104,11 @@
     font-size: 22px;
     font-weight: 500;
     // line-height: 100%;
+    transition-duration: 300ms;
 
-    @include hover(color, $c-red);
+    &:hover {
+      color: $c-red;
+    }
 
     @include onTablet {
       font-size: 16px;
