--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -89,8 +89,11 @@
       font-size: 14px;
       font-weight: 400;
       margin-bottom: 20px;
+      transition-duration: 300ms;
 
-      @include hover(color, $c-red);
+      &:hover {
+        color: $c-red;
+      }
     }
   }
 
