--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,6 +1,7 @@
 .page {
   box-sizing: border-box;
   scroll-behavior: smooth;
+  max-width: 1280px;
 
   &__body {
     position: relative;
@@ -40,6 +41,10 @@
       margin-bottom: 200px;
     }
 
+    &--header {
+      margin-bottom: 107px;
+    }
+
     &--events {
       // margin-bottom: 151px;
       margin-bottom: 0;
@@ -73,7 +78,7 @@
       text-align: left;
     }
 
-    @include onMobile {
+    @include onDesktop {
       text-align: left;
     }
 
