--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,10 +1,9 @@
 .container {
   margin: 0 auto;
-  max-width: 1280px;
   padding: 0 20px;
 
   @include onMobile {
-    padding: 20px;
+    padding: 0 20px;
   }
 
   @include onTablet {
