--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -79,6 +79,8 @@
 
     @include onMobile {
       margin: 20px 0 10px;
+      justify-content: space-between;
+      // gap: 0;
       // margin: 0 21px 20px;
       // gap: 20px;
     }
