--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,31 @@
-$c-gray: #eee;
+//colors
+$c-bg: #fff;
+$c-title: #0f0e08;
+$c-accent: #1a5a4c;
+$c-accent2: #f14a27;
+$c-type: #687480;
+$c-text-main: #4e4e4e;
+
+//sizes
+$s-icon: 24px;
+
+//fonts-families
+$ff-main: "IBM Plex Sans", sans-serif;
+$ff-title: "Montserrat", sans-serif;
+
+//fonts-weight
+$fw-title: 700;
+$fw-info: 500;
+
+//fonts-sizes
+$fs-p: 16px;
+
+//paddings
+
+$p-page-mobile: 20px;
+$p-page-tablet: 34px;
+$p-page-laptop: 55px;
+
+//animations
+
+$a-transition-time: 350ms;
