fix bug with info important-event padding

--- a/src/styles/components/important-event.scss
+++ b/src/styles/components/important-event.scss
@@ -18,7 +18,8 @@
     gap: 20px;
 
     padding-block: clamp(20px, 7.5%, 45px);
-    padding-inline: clamp(0, calc((100% - 280px) * 55 / (570 - 280)), 55px);
+    /* stylelint-disable-next-line */
+    padding-inline: clamp(0px, calc((100% - 280px) * 55 / (570 - 280)), 55px);
 
     background-color: $c-bg;
     box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
