fix autocomplete styles, add favicon, change years, add target _blank to address and and another

--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -40,7 +40,8 @@
     @extend %column;
     gap: clamp(24px, 5vw, 102px);
     @extend %p-page;
-    padding-block: clamp(30px, 10vw, 48px);
+    /* stylelint-disable-next-line */
+    padding-block: clamp(30px, 9.375vw, 40px);
 
     @include onTablet {
       flex-direction: row;
