--- a/src/styles/components/input-email.scss
+++ b/src/styles/components/input-email.scss
@@ -11,12 +11,18 @@
     flex-grow: 1;
     padding-left: 1.5rem;
     background-color: $c-bg;
-
+    font-size: 1rem;
+    
     &::placeholder {
       color: $c-type;
       font-family: $c-title;
       font-size: 14px;
       line-height: 100%;
+    }
+    
+    &:-webkit-autofill {
+      font-size: 1rem;
+      transition: background-color 5000s ease-in-out 0s;
     }
   }
 
