subscription and important-event 100vw

--- a/src/styles/components/subscription.scss
+++ b/src/styles/components/subscription.scss
@@ -1,5 +1,5 @@
 .subscription {
-  @extend %p-page-laptop;
+  // @extend %p-page-laptop;
   @extend %center;
 
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
