--- a/src/styles/components/important-event.scss
+++ b/src/styles/components/important-event.scss
@@ -4,6 +4,7 @@
   &__img {
     width: 100%;
     min-height: 210px;
+    max-height: 550px;
     object-fit: cover;
   }
 
@@ -19,9 +20,7 @@
 
     padding-block: clamp(20px, 7.5%, 45px);
     /* stylelint-disable-next-line */
-    padding-inline: clamp(0px,
-    calc((100% - 280px) * 55 / (570 - 280)),
-    55px);
+    padding-inline: clamp(0px, calc((100% - 280px) * 55 / (570 - 280)), 55px);
 
     background-color: $c-bg;
     box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
