--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,15 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./blocks/header";
+@import "./blocks/main";
+@import "./blocks/actual";
+@import "./blocks/title-tickets";
+@import "./blocks/actual-last";
+@import "./blocks/schedule";
+@import "./blocks/subscribe";
+@import "./blocks/gallery";
+@import "./blocks/footer";
+@import "./blocks/aside";
+@import "./blocks/page";
+@import "./blocks/scroll-to-top";
