--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,76 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onTablet {
+  @media (min-width: 690px) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: 1170px) {
+    @content;
+  }
+}
+
+@mixin pageGrid {
+  display: grid;
+  margin-inline: auto;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 20px;
+
+  @include onTablet {
+    grid-template-columns: repeat(6, 1fr);
+    margin-inline: auto;
+    column-gap: 30px;
+
+  }
+
+  @include onDesktop {
+    grid-template-columns: repeat(12, 1fr);
+    margin-inline: auto;
+    column-gap: 30px;
+  }
+}
+
+@mixin squareAfterTitle {
+  &::after {
+    content: "";
+    width: 10px;
+    height: 10px;
+    background-color: #f14a27;
+    position: absolute;
+
+    @include onTablet {
+      height: 15px;
+      width: 15px;
+    }
+  }
+}
+
+@mixin h3FontStyles {
+  color: #0f0308;
+  font-family: "Montserrat", sans-serif;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%;
+
+  @include onTablet {
+    font-size: 36px;
+  }
+
+  @include onDesktop {
+    font-size: 36px;
+  }
+}
+
+@mixin pFontStyles {
+  color: #4e4e4e;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 150%;
+}
