fix logo position, add hovers for images and address links

--- a/src/styles/components/gallery.scss
+++ b/src/styles/components/gallery.scss
@@ -49,6 +49,11 @@
       margin-right: clamp($p-page-mobile, 6.25vw, $p-page-tablet);
     }
 
+    @include hover {
+      filter: drop-shadow(0 0 5px #000);
+      border-radius: 20px;
+    }
+
     @include onLaptop {
 
       &:first-child,
