--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -58,19 +58,16 @@
 
   &__logo {
     position: absolute;
+    height: 60px;
     /* stylelint-disable-next-line */
     top: clamp(10px, 3.125vw, 15px);
     left: 50%;
     transform: translateX(-50%);
 
     @include onTablet {
-      left: 80px;
+      height: 72px;
+      left: 12%;
       top: clamp(15px, 5vw, 60px);
-    }
-
-    @include onLaptop {
-      left: -30px;
-      transform: translateX(-100%);
     }
   }
 }
