--- a/src/styles/components/important-event.scss
+++ b/src/styles/components/important-event.scss
@@ -21,7 +21,7 @@
     padding-block: clamp(20px, 7.5%, 45px);
     /* stylelint-disable-next-line */
     padding-inline: clamp(0.001px, calc((100% - 280px) * 55 / (570 - 280)), 55px);
-
+    // 0.001px тому що при depoy іде автоматична зміна 0px на 0
     background-color: $c-bg;
     box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
 
