--- a/src/styles/blocks/title-tickets.scss
+++ b/src/styles/blocks/title-tickets.scss
@@ -5,6 +5,7 @@
   font-size: 45px;
   font-weight: 700;
   margin: 20px 0;
+  position: relative;
 
   @include onTablet {
     text-align: left;
@@ -34,22 +35,6 @@
   padding-left: 80px;
   position: relative;
 
-  &:hover {
-    background-color: #1a5a4c;
-    color: #fff;
-  }
-
-  @include onTablet {
-    height: 70px;
-    width: 200px;
-    margin-bottom: 19px;
-  }
-
-  @include onDesktop {
-    margin-left: auto;
-    margin-bottom: 118px;
-  }
-
   &::after {
     content: "";
     width: 50px;
@@ -69,5 +54,25 @@
       height: 70px;
       width: 70px;
     }
+  }
+
+  &:hover {
+    background-color: #1a5a4c;
+    color: #fff;
+
+    &::after {
+      background-image: url(../icons/icon-arrow-black.svg);
+    }
+  }
+
+  @include onTablet {
+    height: 70px;
+    width: 200px;
+    margin-bottom: 19px;
+  }
+
+  @include onDesktop {
+    margin-left: auto;
+    margin-bottom: 118px;
   }
 }
