fixed vertical line in aside menu

--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -84,12 +84,16 @@
 
     @include onTablet {
       margin-top: 40px;
+      height: 145px;
+      border-right: 1px solid rgba(255, 255, 255, 0.5);
 
       grid-column: 1 / 4;
     }
 
     @include onDesktop {
-      grid-column: 1 / 6;
+      column-gap: 102px;
+
+      grid-column: 1 / 7;
     }
   }
 
@@ -101,14 +105,20 @@
     grid-column: 1 / -1;
 
     @include onTablet {
-      margin: 0;
-      transform: rotate(-90deg);
+      display: none;
+      // width: 145px;
+      // margin: 0;
+      // transform: rotate(-90deg);
 
-      grid-column: 3 / 3;
+      // grid-column: 3 / 3;
     }
 
     @include onDesktop {
-      grid-column: 6 / 6;
+      display: none;
+
+      // justify-content: center;
+      // align-self: auto;
+      // grid-column: 6 / 6;
     }
   }
 
