fixed vertical line of contacts

--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -63,6 +63,10 @@
       margin: 50px 0 20px;
       line-height: 140.63%;
     }
+
+    @include onDesktop {
+      margin: 0 0 20px;
+    }
   }
 
   &__day,
@@ -125,8 +129,7 @@
     }
 
     @include onDesktop {
-      transform: rotate(-90deg);
-      grid-column: 9 / 8;
+      display: none;
     }
   }
 
@@ -137,6 +140,7 @@
     }
 
     @include onDesktop {
+      margin-top: 50px;
       grid-column: 3 / 5;
     }
   }
@@ -148,8 +152,12 @@
     }
 
     @include onDesktop {
-      grid-column: 6 / 8;
+      height: 260px;
+      padding-right: 65px;
+      margin-top: 50px;
+      border-right: 1px solid rgba(26, 90, 76, 0.5);
 
+      grid-column: 5 / 8;
     }
   }
 
