--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
-$c-gray: #eee;
+$tablet-width: 768px;
+$desktop-width: 1280px;
+
+$accent-title: #0f0e08;
+$desc-text: #4e4e4e;
+$green: #1a5a4c;
+$secondary-color: #687480;
