--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -2,6 +2,8 @@
   &__picture:hover {
     transition: transform 0.3s ease;
     transform: scale(1.1);
+    width: 100%;
+    cursor: pointer;
   }
 
   &__picture:not(:hover) {
