--- a/src/styles/blocks/actual.scss
+++ b/src/styles/blocks/actual.scss
@@ -47,13 +47,14 @@
 
   &__picture {
     width: 100%;
-    height: 210px;
+    height: auto;
+    display: block;
+  }
+
+  &__picture-wrapper {
+    overflow: hidden;
 
     grid-column: 1 / -1;
-
-    @include onTablet {
-      height: 100%;
-    }
 
     @include onDesktop {
       grid-column: 1 / 8;
