--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -13,25 +13,34 @@
   &__picture-4 {
     width: 100%;
     height: 100%;
+  }
+
+  &__picture-wrapper-4 {
+    overflow: hidden;
+    height: 410px;
 
     grid-column: 1 / -1;
 
     @include onTablet {
-      height: 600px;
+      height: 543px;
 
       grid-column: 1 / 4;
     }
 
     @include onDesktop {
-      margin-bottom: 30px;
-
       grid-column: 1 / 5;
+      height: 600px;
+      margin-bottom: 30px;
     }
   }
 
   &__picture-5 {
     width: 100%;
     height: 100%;
+  }
+
+  &__picture-wrapper-5 {
+    overflow: hidden;
     display: none;
 
     @include onTablet {
@@ -45,36 +54,49 @@
   }
 
   &__picture-6 {
+    width: 100%;
+  }
+
+  &__picture-wrapper-6 {
+    overflow: hidden;
     display: none;
 
     @include onDesktop {
-      display: block;
-      width: 100%;
       height: 600px;
+      display: block;
+      margin-bottom: 30px;
 
       grid-column: 5 / -1;
     }
   }
 
   &__picture-7 {
+    height: 100%;
+    width: 100%;
+  }
+
+  &__picture-wrapper-7 {
+    overflow: hidden;
     display: none;
 
     @include onDesktop {
       display: block;
-      width: 100%;
-      height: 360px;
 
       grid-column: 1 / -5;
     }
   }
 
   &__picture-8 {
+    width: 100%;
+    height: 100%;
+  }
+
+  &__picture-wrapper-8 {
+    overflow: hidden;
     display: none;
 
     @include onDesktop {
       display: block;
-      width: 100%;
-      height: 360px;
 
       grid-column: -5 / -1;
     }
