--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -59,6 +59,7 @@
     top: 9px;
     left: 50%;
     transform: translateX(-50%);
+    transition: transform 0.3s ease-in-out;
 
     &:hover {
       transform: translateX(-50%) scale(1.1);
