--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,23 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/reset";
+
+@import "./blocks/title";
+@import "./blocks/header";
+@import "./blocks/nav";
+@import "./blocks/menu";
+@import "./blocks/rectangle";
+@import "./blocks/section";
+@import "./blocks/main";
+@import "./blocks/pictures";
+@import "./blocks/span";
+@import "./blocks/div";
+@import "./blocks/footer";
+@import "./blocks/input";
+@import "./blocks/grid";
+@import "./blocks/ellipse";
 
 body {
-  background: $c-gray;
+  min-width: 320px;
+  height: 100vh;
+  background-color: white;
+  box-sizing: border-box;
 }
