--- a/src/styles.css
+++ b/src/styles.css
@@ -101,8 +101,7 @@ table {
 }
 
 .header {
-  width: 320px;
-  height: 300px;
+  min-width: 320px;
   background-color: white;
   background-image: url("../images/project/header_background.svg");
   background-size: cover;
@@ -116,7 +115,7 @@ table {
 
 .nav {
   height: 70px;
-  width: 320px;
+  min-width: 320px;
   padding: 9px 0 0;
   display: flex;
   align-items: center;
@@ -129,7 +128,7 @@ table {
 }
 
 .container {
-  width: 320px;
+  min-width: 320px;
   height: 50px;
   display: flex;
   margin: 0 auto;
@@ -162,7 +161,7 @@ table {
 }
 
 .section {
-  width: 320px;
+  min-width: 320px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -311,7 +310,7 @@ table {
 }
 
 .footer {
-  width: 320px;
+  min-width: 320px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
