--- a/src/styles.css
+++ b/src/styles.css
@@ -102,6 +102,7 @@ table {
 
 .header {
   min-width: 320px;
+  height: 300px;
   background-color: white;
   background-image: url("../images/project/header_background.svg");
   background-size: cover;
@@ -128,7 +129,7 @@ table {
 }
 
 .container {
-  min-width: 320px;
+  width: 320px;
   height: 50px;
   display: flex;
   margin: 0 auto;
@@ -161,7 +162,7 @@ table {
 }
 
 .section {
-  min-width: 320px;
+  width: 320px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -310,13 +311,13 @@ table {
 }
 
 .footer {
-  min-width: 320px;
+  width: 320px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
 }
 .footer__background {
-  width: 320px;
+  min-width: 320px;
   height: 386px;
   background-color: #000;
   background-image: url("../images/project/dark.svg");
