--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,6 +1,6 @@
 .header {
   min-width: 320px;
-  // height: 300px;
+  height: 300px;
   background-color: white;
   background-image: url("../images/project/header_background.svg");
   background-size: cover;
