--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -35,6 +35,7 @@
 
     @include onTablet {
       left: 35px;
+      top: 40px;
     }
 
     @include onDesktop {
@@ -73,6 +74,7 @@
       @include onDesktop {
       }
     }
+
     &-button {
       display: flex;
       align-items: center;
@@ -88,6 +90,7 @@
         transform: translateX(50%);
       }
     }
+
     &-link {
       border: 1px solid $green;
       padding-inline: 80px;
@@ -106,6 +109,7 @@
         padding-inline: 68px;
       }
     }
+
     &-arrow {
       display: flex;
       justify-content: center;
@@ -117,6 +121,34 @@
 
       @include onTablet {
         padding-inline: 23px;
+      }
+    }
+
+    &-line {
+      display: none;
+
+      @include onDesktop {
+        display: block;
+        position: absolute;
+        left: 40px;
+        transform: rotate(-90deg);
+        text-transform: uppercase;
+        font-family: IBM Plex Sans;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 100%;
+        color: $secondary-color;
+
+        &::before {
+          position: absolute;
+          content: "";
+          width: 70px;
+          height: 1px;
+          top: 50%;
+          right: 70px;
+          background-color: $green;
+        }
       }
     }
   }
