--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,8 @@
 @import "./utils/vars";
 @import "./utils/mixins";
 
+@import "./blocks/common";
 @import "./blocks/header";
+@import "./blocks/menu";
+@import "./blocks/page";
+@import "./blocks/events";
