made changes according to the comments

--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -9,8 +9,10 @@
   }
 
   @include onLargeScreen {
-    height: 100vh;
+    box-sizing: border-box;
+    // height: 100vh;
     background-repeat: no-repeat;
+    background-size: cover;
   }
 
   &__conteiner {
@@ -90,18 +92,23 @@
     }
   }
 
+  &__input__button {
+    border: none;
+    background-color: transparent;
+  }
+
     &__image {
       display: block;
       background-color: $c-orange;
       padding: 19px 21px;
-      transition: all 2s;
+      transition: all 0.3s;
 
       @include onTablet {
         padding: 29px 31px;
         margin-left: 16px;
 
         &:hover {
-          transform: rotate(359.9deg);
+          transform: scale(110%);
         }
       }
 
