--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -71,8 +71,9 @@
 }
 
 @mixin forLogo {
+  transition: all 0.3s;
+  
   &:hover {
-    transform: scale(90%);
-    box-shadow: 10px 5px 5px $background-c-green;
+    transform: scale(110%);
   }
 }
