--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -33,7 +33,7 @@
 
   &__subtitle {
     text-transform: uppercase;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 16px;
