--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -5,7 +5,6 @@
     box-sizing: border-box;
     @include paddingInLine;
     padding-top: 9px;
-
     position: relative;
 
   &__nav {
@@ -14,7 +13,8 @@
   }
 
   &__link__wrapper {
-    margin-left: 88px;
+    // margin-left: 88px;
+    margin: 0 auto;
 
     @include onTablet {
       width: 220px;
@@ -84,10 +84,7 @@
     background-color: $background-c-white;
     display: block;
     border: 1px solid $background-c-green;
-    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 500;
-    font-size: 16px;
-    line-height: 16px;
     height: 50px;
     width: 280px;
     padding: 15px 0;
@@ -117,7 +114,6 @@
 
     @include onLargeScreen {
       display: inline-block;
-      font-family: inherit;
       font-weight: 700;
       font-size: 14px;
       line-height: 14px;
