--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,33 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/reset";
+@import "./utils/mixins";
+@import "./utils/vars";
+@import "./blocks/title";
+@import "./blocks/header";
+@import "./blocks/button";
+@import "./blocks/icon";
+@import "./blocks/logo";
+@import "./blocks/main";
+@import "./blocks/events";
+@import "./blocks/picture";
+@import "./blocks/separator";
+@import "./blocks/gallery";
+@import "./blocks/subscribe";
+@import "./blocks/contact-us";
+@import "./blocks/opening";
+@import "./blocks/address";
+@import "./blocks/socials";
+@import "./blocks/line";
+@import "./blocks/links";
+@import "./blocks/footer";
+@import "./blocks/hamburger";
+@import "./blocks/menu";
+@import "./blocks/upward";
+@import "./blocks/smth";
+@import "./blocks/slider";
+@import "./blocks/container-gallery";
+@import "./blocks/gallery-desktop";
+@import "./blocks/page";
 
-body {
-  background: $c-gray;
+* {
+  scroll-behavior: smooth;
 }
