made changes according to the comments

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -11,8 +11,12 @@
   }
 
   @include onLargeScreen {
+    padding-inline: 55px;
+
     &__cover {
       display: flex;
+      max-width: 1280px;
+      margin: 0 auto;
     }
   }
 
