--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -9,6 +9,13 @@
     padding-inline: 55px;
   }
 
+  &__wrapper {
+    @include onLargeScreen {
+      max-width: 1280px;
+      margin: 0 auto;
+    }
+  }
+
   &__title {
     margin-top: 183px;
     font-family: "Montserrat", sans-serif;
