--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,7 +50,7 @@ html {
   background-image: url(..//images/mobile-muzej.png);
   background-repeat: no-repeat;
   background-size: contain;
-  max-width: 1280px;
+  // max-width: 1280px;
   margin: 0 auto;
 
   @include onTablet {
