--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -1,16 +1,15 @@
 .subscribe {
   background-image: url(..//images/mobile-muzej-3.png);
-  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
   padding: 0 20px;
 
   @include onTablet {
     background-image: url(..//images/mobile-muzej-4.png);
-    background-size: contain;
   }
 
   @include onLargeScreen {
     box-sizing: border-box;
-    // height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -59,7 +58,7 @@
   &__input__conteiner {
     display: flex;
     justify-content: center;
-    align-items: end;
+    align-items: center;
   }
 
   &__input {
@@ -95,6 +94,7 @@
   &__input__button {
     border: none;
     background-color: transparent;
+    padding: 0;
   }
 
     &__image {
