made changes according to the comments

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -9,11 +9,14 @@
   }
 
   &__wrapper {
-    margin-bottom: 112px;
+    @include onTablet {
+      margin-bottom: 112px;
+    }
 
     @include onLargeScreen {
       max-width: 1280px;
       margin: 0 auto;
+      margin-bottom: 104px;
     }
   }
 
