--- a/src/styles/blocks/smth.scss
+++ b/src/styles/blocks/smth.scss
@@ -1,4 +1,4 @@
-@use "./utils/mixins.scss" as *;
+@import "src/styles/utils/mixins";
 
 .smth {
   overflow: hidden;
@@ -41,8 +41,8 @@
       position: relative;
       width: 1px;
       height: 70px;
-      color: $color-greenDark;
-      background-color: $color-greenDark;
+      color: $color-green-dark;
+      background-color: $color-green-dark;
       border: 0;
       transform: rotate(90deg);
     }
