fixed scroll the menu

--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -1,6 +1,8 @@
 .aside {
   background-color: #1a5a4c;
   max-height: 0;
+  overflow: auto;
+  z-index: 5;
   transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
 
   &__content {
@@ -106,19 +108,10 @@
 
     @include onTablet {
       display: none;
-      // width: 145px;
-      // margin: 0;
-      // transform: rotate(-90deg);
-
-      // grid-column: 3 / 3;
     }
 
     @include onDesktop {
       display: none;
-
-      // justify-content: center;
-      // align-self: auto;
-      // grid-column: 6 / 6;
     }
   }
 
