add task solution

--- a/src/blocks/header.scss
+++ b/src/blocks/header.scss
@@ -44,14 +44,14 @@
   }
 }
 
-.header__mixed {
-  display: flex;
-  align-items: center;
+// .header__mixed {
+//   display: flex;
+//   align-items: center;
 
-  @include onDesktop {
-    margin-right: -300px;
-  }
-}
+//   @include onDesktop {
+//     margin-right: -300px;
+//   }
+// }
 
 .header__title {
   font-size: 45px;
@@ -84,6 +84,10 @@
   justify-content: center;
 
   margin-bottom: 70px;
+
+  @include onDesktop {
+    margin-right: -300px;
+  }
 }
 
 .header__tickets {
