--- a/src/blocks/relevant.scss
+++ b/src/blocks/relevant.scss
@@ -76,14 +76,6 @@
   }
 }
 
-.relevant__mixed-type {
-  width: 130px;
-}
-
-.relevant__mixed-data {
-  width: 140px;
-}
-
 .relevant__subtitle {
   font-size: 28px;
   font-weight: 400;
@@ -139,6 +131,7 @@
   font-size: 15px;
   font-weight: 500;
   line-height: 15px;
+  width: 130px;
 }
 
 .relevant__mixed-data {
@@ -153,7 +146,7 @@
   font-size: 16px;
   font-weight: 300;
   line-height: 24px;
-
+  width: 140px;
   max-width: 280px;
 
   @include onTablet {
@@ -177,7 +170,7 @@
 
 .relevant__last-block {
   background-color: #fff;
-  box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
+  box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
   width: 280px;
 
   margin-top: -50px;
