--- a/src/blocks/subscribe.scss
+++ b/src/blocks/subscribe.scss
@@ -57,7 +57,7 @@
 
   max-width: 280px;
   margin-bottom: 50px;
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: "IBM Plex Sans", sans-serif;
 
   @include onTablet {
     line-height: 18px;
@@ -90,6 +90,7 @@
 .subscribe__input {
   height: 50px;
   width: 230px;
+  cursor: pointer;
 
   box-sizing: border-box;
 
@@ -114,10 +115,6 @@
     width: 70px;
     height: 70px;
   }
-}
-
-.subscribe__input {
-  cursor: pointer;
 }
 
 .subscribe__input::placeholder {
