--- a/src/blocks/normalize.scss
+++ b/src/blocks/normalize.scss
@@ -2,7 +2,7 @@ body {
   background: $c-gray;
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .page {
