hover effect for links

--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -1,9 +1,15 @@
 @import "src/styles/utils/mixins";
+@import "src/styles/utils/vars";
+
 
 .contact-us {
   display: grid;
   grid-template-columns: 130px 128px;
   gap: 0 20px;
+
+  &::before {
+    pointer-events: auto;
+  }
 
   &__links {
     margin-bottom: 80px;
