--- a/src/styles/blocks/socials.scss
+++ b/src/styles/blocks/socials.scss
@@ -4,17 +4,30 @@
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
+  transition: all 0.3s ease;
 
-  &__fb {
-    background-image: url(../images/icons/fb_icon.svg);
+  &__fb,
+  &__insta {
+    background-size: contain;
+    background-repeat: no-repeat;
     width: 24px;
     height: 24px;
     margin-right: 20px;
   }
 
+  &__fb {
+    background-image: url(../images/icons/fb_icon.svg);
+
+    &:hover {
+      background-image: url(../images/icons/fb_active.svg);
+    }
+  }
+
   &__insta {
     background-image: url(../images/icons/insta_icon.svg);
-    width: 24px;
-    height: 24px;
+
+    &:hover {
+      background-image: url(../images/icons/insta_active.svg);
+    }
   }
 }
