--- a/src/styles/blocks/address.scss
+++ b/src/styles/blocks/address.scss
@@ -22,3 +22,26 @@
     }
   }
 }
+
+.address a:hover {
+  color: $color-green;
+  transform: scale(1.05);
+}
+
+.address a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -5px;
+  left: 0;
+  background-color: $color-green;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease;
+}
+
+.address a:hover::after {
+  visibility: visible;
+  transform: scaleX(1);
+}
