--- a/src/styles/blocks/links.scss
+++ b/src/styles/blocks/links.scss
@@ -1,6 +1,13 @@
 @import "src/styles/utils/mixins";
 
 .links {
+  color: $color-black;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+  text-decoration: none;
 
   &__list {
     display: grid;
@@ -15,19 +22,27 @@
       grid-template-columns: repeat(2, 170px);
     }
   }
+}
 
-  &__link {
-    color: $color-black;
-    font-family: "IBM Plex Sans", sans-serif;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 14px;
-    text-decoration: none;
-    transition: transform 0.5s;
+.links a:hover {
+  color: $color-green;
+  transform: scale(1.05);
+}
 
-    &:hover {
-      transform: scale(1.1);
-    }
-  }
+.links a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -5px;
+  left: 0;
+  background-color: $color-green;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease;
+}
+
+.links a:hover::after {
+  visibility: visible;
+  transform: scaleX(1);
 }
