--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,4 +1,5 @@
 @import "src/styles/utils/mixins";
+@import "src/styles/utils/vars";
 
 .menu {
   position: fixed;
@@ -45,9 +46,10 @@
     line-height: 14px;
     text-decoration: none;
     transition: transform 0.5s;
+    color: $color-white;
 
     &:hover {
-      transform: scale(1.2);
+      transform: scale(1.05);
     }
 
     @include for-tablet {
