--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -4,11 +4,12 @@
 
 .overlay {
   position: fixed;
-  display: none;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  inset: 0;
-  background-color: rgba(0,0,0,0.5);
-  z-index: 2;
-  cursor: pointer;
+  background-color: black;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
 }
